[project]
name = "forecasting-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
   "numpy",
   "pandas",
   "seaborn",
   "xgboost",
   "scikit-learn",
   "matplotlib",
   "datetime",
   "plotly",
   "statsmodels"
]

[dependency-groups]
dev = [
    "ipython>=9.2.0",
]
